# DAWtest

DAWtest/: CMakeLists.txt  DAWtest.exe.manifest  DAWtest.sln  DAWtest.vcxproj  DAWtest.vcxproj.filters  PaStreamHandler.cpp  PaStreamHandler.h  RingBuffer.cpp  RingBuffer.h  Sound.cpp  Sound.h  build.sh  gui.cpp  gui.h  input.cpp  input.h  main.cpp  player.cpp  player.h  qtest.sh  rbtest.sh  run.sh  synth.cpp  synth.h  test.sh
DAWtest/dependencies/GLFW/src/: .glfw_config.h.swp  Makefile  cmake_install.cmake  glfw3.pc  update_mappings.vcxproj
DAWtest/engines/: CMakeLists.txt
DAWtest/engines/AudioEngine/: CMakeLists.txt
DAWtest/engines/AudioEngine/include/: AudioEngine.h  Device.h  RingBuffer.h  SampleSound.h  Sound.h  StreamHandler.h
DAWtest/engines/AudioEngine/include/Synth/: EasingMath.h  Envelope.h  Modulator.h  Oscillator.h  Synth.h  SynthSound.h
DAWtest/engines/AudioEngine/src/: AudioEngine.cpp  Device.cpp  RingBuffer.cpp  SampleSound.cpp  Sound.cpp  StreamHandler.cpp
DAWtest/engines/AudioEngine/src/Synth/: EasingMath.cpp  Envelope.cpp  Modulator.cpp  Oscillator.cpp  Synth.cpp  SynthSound.cpp
DAWtest/engines/AudioEngine/tests/: RingBufferTest.cpp
DAWtest/include/: Gui.h  KeyboardController.h
DAWtest/libs/GLFW/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  glfw.vcxproj  glfw.vcxproj.filters  update_mappings.vcxproj.filters
DAWtest/libs/glad/: glad.h
DAWtest/libs/sndfile/: CONTROL
DAWtest/libs/sndfile/share/libsndfile/: vcpkg.spdx.json  vcpkg_abi_info.txt
DAWtest/src/: Gui.cpp  KeyboardController.cpp  main.cpp
DAWtest/tempStorage/: CMakeLists.txt  gui.cpp  player.cpp  synth.cpp  synth.h  synthstored.cpp
DAWtest/tempStorage/OpenAL/: CONTROL
DAWtest/tempStorage/OpenAL/share/openal-soft/: vcpkg.spdx.json  vcpkg_abi_info.txt
DAWtest/x64/Debug/: DAWTest.exe.recipe  DAWTest.ilk  DAWTest.vcxproj.FileListAbsolute.txt  vc143.idb
DAWtest/x64/Debug/DAWTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DAWTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
